C sharp implementation progress
-Action data wrapper class (new)
-lots of work in Battle.cs
-working attack/dodge logic
-partially implemented super attacks
-item command implemented

still no AI or battle menu to use any of it, though.

--- a/ConsoleCombat2/ConsoleCombat2.csproj
+++ b/ConsoleCombat2/ConsoleCombat2.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Action.cs" />
     <Compile Include="Battle.cs" />
     <Compile Include="fileManager.cs" />
     <Compile Include="Menu.cs" />
